fix: Remove overflow hidden from lf-checkbox host
The overflow: hidden property was removed from the :host selector in lf-checkbox.scss to allow content to overflow as needed. This may improve layout flexibility for the checkbox component.

--- a/packages/core/src/components/lf-checkbox/lf-checkbox.scss
+++ b/packages/core/src/components/lf-checkbox/lf-checkbox.scss
@@ -6,7 +6,6 @@ $comp: "checkbox";
 
 :host {
   @include lf-el-stretch;
-  overflow: hidden;
 }
 
 .form-field {
